--- a/styles/indexhome.css
+++ b/styles/indexhome.css
@@ -1,4 +1,4 @@
-.homeWrapper {
+.home-intro {
   display: flex;
   flex-direction: row;
   align-items: center;
